--- a/less/navigation.less
+++ b/less/navigation.less
@@ -41,7 +41,7 @@ nav {
       .border-style;
       .font-shadow;
       .btn {
-        .btn(@clear-color; @white; @white; @apple-red; 100%; 0px; 1.8rem; 2.4px 15px 2.4px 10px);
+        .btn(@clear-color; @white; @white; @luncher-saddle; 100%; 0px; 1.8rem; 2.4px 15px 2.4px 10px);
         margin: 0 5px 0 0;
         @media @phone {
           font-size: 1.2rem;
