--- a/less/signin.less
+++ b/less/signin.less
@@ -15,7 +15,7 @@
       position: relative;
       opacity: 0.95;
       .splash-overlay {
-        background: @splash-bg-gradient;
+        .bg-gradient(@black; 1; @dark; 0.25);
         background-attachment: fixed;
         height: 100%;
       }
@@ -23,7 +23,7 @@
     .login {
       position: absolute;
       left: 0;
-      top: 45%;
+      top: 25%;
       width: 100%;
       text-align: center;
       color: @apple-red;
