--- a/less/donate.less
+++ b/less/donate.less
@@ -1,9 +1,9 @@
-html { height: unset; } // Fix the full splash height for page without splash
+html.donate { height: unset; } // Fix the full splash height for page without splash
 
 .donate { 
   .bg-gradient(@luncher-dark-olive;1;@luncher-beige;0.5);
 
-  nav {
+  nav.nav-solid {
     background-color: @dark;
     .box-shadow;
     li { 
