--- a/less/donate.less
+++ b/less/donate.less
@@ -6,7 +6,7 @@ html.donate { height: unset; } // Fix the full splash height for page without sp
   nav.nav-solid {
     background-color: @dark;
     .box-shadow;
-    li { 
+    li {
       margin-right: 5px;
     }
   }
@@ -62,12 +62,12 @@ section a.divider {
   margin-top: -3px;
   text-decoration: none;
   .leading-arrow {
-    background-color: @dark;
-    color: @white;
+    background-color: @luncher-dark-olive;
+    color: @luncher-beige;
     font-size: 5rem;
     margin: -27px auto;
     border-radius: 28px;
-    border: 2px solid @dark;
+    border: 2px solid @luncher-dark-olive;
     z-index: 3;
     &:hover {
       transform: scale(1.25);
@@ -75,6 +75,7 @@ section a.divider {
     }
   }
 }
+
 
 
 .donate-footer {
