--- a/less/navigation.less
+++ b/less/navigation.less
@@ -8,6 +8,7 @@ nav {
     background-color: @nav-bg;
   }
   h1 {
+    .font-logo;
     align-self: flex-start;
     padding: 10px;
     width: 100%;
