--- a/less/home-page.less
+++ b/less/home-page.less
@@ -12,14 +12,11 @@ html { height: 100%; }
       background-repeat: no-repeat;
       background-size: cover;
       background-attachment: fixed;
-      
       top: 0;
       height: 100%;
       position: relative;
       opacity: 0.92;
-      // filter: brightness(100%) contrast(90%);
       .splash-overlay {
-        // background: @splash-bg-gradient;
         .bg-gradient(@black;1;@dark;0.25);
         background-attachment: fixed;
         height: 100%;
@@ -31,12 +28,13 @@ html { height: 100%; }
       top: 35%;
       width: 100%;
       text-align: center;
-      color: @apple-red;
+      color: @luncher-saddle;
       
       h2 {
-        background-color: @porcelain;
+        background-color: @white;
         padding: 18px;
         width: 33%;
+        max-width: 420px;
         margin: 0 auto;
         .border-style;
         .box-shadow(2px, 2px, 8px, rgba(0,0,0,0.75));
@@ -49,8 +47,10 @@ html { height: 100%; }
       display: flex;
       justify-content: center;
       margin: 0 auto;
-      .btn(@white; @apple-red; @white; @apple-red; 25%; 0px; 1.8rem);
+      max-width: 380px;
+      .btn(@white; @luncher-saddle; @white; @luncher-saddle; 25%; 0px; 1.8rem);
       .border-style;
+      .box-shadow;
       z-index: 1;
     }
   }
@@ -63,12 +63,12 @@ section a.divider {
   margin-top: -3px;
   text-decoration: none;
   .leading-arrow {
-    background-color: @dark;
-    color: @white;
+    background-color: @luncher-dark-olive;
+    color: @luncher-beige;
     font-size: 5rem;
     margin: -27px auto;
     border-radius: 28px;
-    border: 2px solid @dark;
+    border: 2px solid @luncher-dark-olive;
     z-index: 3;
     &:hover {
       transform: scale(1.25);
@@ -82,104 +82,115 @@ section a.divider {
   display: block;
   max-width: unset;
   width: 100%;
-  background-color: @dark;
+  background-color: @luncher-dark-olive;
 
   .luncher-info {
-    transform: rotate(10deg) skew(10deg);
+    // transform: rotate(10deg) skew(10deg);  // Optional rotated div effect
     width: 100%;
     left: -0.7%;
-    background-color: @dark;
-    color: @porcelain;
+    background-color: @luncher-dark-olive;
+    color: @white;
     position: relative;
     padding: 10% 20%;
-    @media @phone {
-      padding: 20%;
+    @media @phone { padding: 20%; }
+    @media @medium { padding: 20%; }
+    @media @phone-small { padding: 25% 5%; } // Give a little more vertical room on small displays. Take up more horiz space.
+    a {
+      grid-column: span 2;
+      display: flex;
+      justify-content: center;
+      margin: 0 auto 40px;
+      .btn(@clear-color; @white; @white; @luncher-saddle; 33%; 0px; 1.8rem);
+      .border-style;
+      z-index: 1;
     }
-    @media @medium {
-      padding: 20%;
-    }
-    @media @phone-small { // Give a little more vertical room on small displays. Take up more horiz space.
-      padding: 25% 5%;
-    }
-    .grid-col-2 { // Change to 1 column for 600px and below
-      transform: rotate(-9.7deg) skew(-10deg);
-      left: 5%;
+    .grid { // Change to 1 column for 600px and below
+      // transform: rotate(-9.7deg) skew(-10deg); left: 5%; // Optional rotated div effect
+      display: grid;
+      grid-template-columns: 10% 80% 10%;
+      grid-gap: 50px 0px;
+      max-width: 800px;
+      margin: 0 auto;
       @media @phone {
         grid-template-columns: 100%;
         grid-gap: 10px 10px;
       }
-      a {
-        grid-column: span 2;
-        display: flex;
-        justify-content: center;
-        margin: 0 auto;
-        .btn(@clear-color; @white; @white; @apple-red; 33%; 0px; 1.8rem);
-        .border-style;
-        z-index: 1;
-      }
       p {
-        text-align: center;
         align-self: center; 
       }
-      .icon { 
+      .icon-left { 
         font-size: 6rem;
+        grid-column: 1;
+        text-align: center;
         @media @phone { // create a one column grid on 600px and below
           font-size: 3rem;
           grid-column: 1;
         }
-        @media @medium {
-          font-size: 4rem;
-        }
+        @media @medium { font-size: 4rem; }
       }
-      .text {
+      .text-right {
         font-size: 2.2rem;
         margin-left: 20px;
+        grid-column: span 2;
+        text-align: left;
         @media @phone { // create a one column grid on 600px and below
           font-size: 1.4rem;
           grid-column: 1;
           padding-bottom: 20px;
           margin-left: unset;
         }
-        @media @medium {
-          font-size: 2rem;
+        @media @medium { font-size: 2rem; }
+      }
+      .icon-right { 
+        font-size: 6rem;
+        grid-column: 3;
+        text-align: center;
+        @media @phone { // create a one column grid on 600px and below
+          font-size: 3rem;
+          grid-column: 1;
         }
+        @media @medium { font-size: 4rem; }
+      }
+      .text-left {
+        font-size: 2.2rem;
+        margin-right: 20px;
+        grid-column: span 2;
+        text-align: right;
+        @media @phone { // create a one column grid on 600px and below
+          font-size: 1.4rem;
+          grid-column: 1;
+          padding-bottom: 20px;
+          margin-left: unset;
+        }
+        @media @medium { font-size: 2rem; }
       }
     }
   }
 
   .school-map {
-    background-color: @apple-yellow;
-    color: @apple-red;
+    background-color: @luncher-beige;
+    color: @luncher-saddle;
     position: relative;
     padding: 5% 0 0 0;
     z-index: 3;
     .box-shadow;
-
     h3 {
       text-align: center;
     }
     p.description {
-      // grid-column-start: 1;
-      // grid-column-end: 1;
-      // grid-row-start: 1;
-      // grid-row-end: 1;
       font-size: 1.6rem;
       text-align: center;
-      // .icon {
-      //   font-size: 6rem;
-      //   padding: 0 0 20px 0;
-      // }
     }
     .map {
-      // grid-column-start: 1;
-      // grid-column-end: 1;
-      // grid-row-start: 2;
-      // grid-row-end: 2;
+      position: relative;
+      max-width: 1200px;
+      margin: 0 auto;
       margin-top: 20px;
-    }
-    #mapid { 
       height: 400px; 
       font-size: 1rem;
+    }
+    #mapid { 
+
     }
     
   }
@@ -193,10 +204,9 @@ section a.divider {
     position: relative;
     z-index: 2;
     .box-shadow;
-    color: @apple-red;
+    color: @luncher-sienna;
     .newsletter-overlay {
-      .bg-gradient(@apple-yellow;0.75;@apple-tan;0.75);
-      // background: @newsletter-bg-gradient;
+      .bg-gradient(@luncher-beige;0.95;@luncher-tan;0.75);
       height: 100%;
       form {
         padding: 0 0 20px 0;
@@ -213,7 +223,7 @@ section a.divider {
             display: flex;
             justify-content: center;
             margin: 10px auto 0;
-            .btn(@clear-color; @apple-red; @white; @apple-red; 33%; 0px; 1.8rem);
+            .btn(@clear-color; @luncher-saddle; @white; @luncher-saddle; 33%; 0px; 1.8rem);
             .border-style;
             z-index: 1;
           }
@@ -235,8 +245,8 @@ section a.divider {
 
 
   .contact {
-    background-color: @apple-tan;
-    color: @dark;
+    background-color: @luncher-tan;
+    color: @luncher-dark-olive;
     padding: 5% 15%;
     @media @phone {
       padding: 5% 5%;
@@ -273,7 +283,7 @@ section a.divider {
         
       }
       a {
-        color: @dark;
+        color: @luncher-dark-olive;
         text-align: center;
         align-self: baseline;
         &:hover {
