--- a/less/resetpassword.less
+++ b/less/resetpassword.less
@@ -62,12 +62,12 @@ section a.divider {
   margin-top: -3px;
   text-decoration: none;
   .leading-arrow {
-    background-color: @dark;
-    color: @white;
+    background-color: @luncher-dark-olive;
+    color: @luncher-beige;
     font-size: 5rem;
     margin: -27px auto;
     border-radius: 28px;
-    border: 2px solid @dark;
+    border: 2px solid @luncher-dark-olive;
     z-index: 3;
     &:hover {
       transform: scale(1.25);
